syntax = "proto3";
package protocol;

//optimize_for 加快解析的速度
option optimize_for = SPEED;
option java_package = "com.ykt.im.socket.protobuf";
option java_outer_classname = "ExternalListWrap";

message ExternalList {
    repeated string external_userid = 1;     //客户userid数组
}