syntax = "proto3";
package protocol;

//optimize_for 加快解析的速度
option optimize_for = SPEED;
option java_package = "com.ykt.im.socket.protobuf";
option java_outer_classname = "ExternalMsgSaveWrap";

message ExternalMsgSave {
    string external_userid = 1;     //客户userid
    string wx_msg_id = 2;           //企业微信消息ID
    string msg_id = 3;              //平台消息ID，若为空则表示失败
}